--- a/index.html
+++ b/index.html
@@ -16,21 +16,32 @@
 </head>
 <body>
 
-  Learn to code by watching others
+  <div class="container">
+    <section class="intro">
+      <h1 class="title">
+        Learn to code by watching others
+      </h1>
+      <p class="description">
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+      but understanding how developers think is invaluable.
+      </p>   
+    </section>
+    
+    <section class="inputs">
+      <button class="btn">Try it free 7 days then $20/mo. thereafter</button>
+      <form action="">
+        First Name 
+        Last Name 
+        Email Address
+        Password
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+        Claim your free trial 
 
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+        By clicking the button, you are agreeing to our Terms and Services
+      </form>
+    </section>    
+  </div>
+  
   
   <footer>
     <p class="attribution">
