--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <button class="btn free-trial">
           Claim your free trial
         </button>
-        
+        <p class="terms-message">By clicking the button, you are agreeing to our <span class=>Terms and Services</span></p>
 
-        By clicking the button, you are agreeing to our Terms and Services
+        
       </form>
     </section>    
   </div>
